# threadly-api

./: .gitignore  AUTORS.md  Dockerfile  Procfile  README.md  billingConfig.json  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run-celery-dev.sh  run-celery-scheduler.sh  run-celery-task.sh
apps/accounts/: admin.py  apps.py  constants.py  models.py  tasks.py
apps/accounts/api/: mutations.py  queries.py  types.py
apps/accounts/migrations/: 0001_initial.py  0002_auto_20211027_1534.py  0003_userconfiguration.py  0004_user_due_premium_date.py  0005_alter_user_due_premium_date.py
apps/api/: apps.py  schema.py
apps/billing/: admin.py  apps.py  constants.py  models.py
apps/billing/api/: mutations.py  queries.py  types.py
apps/billing/migrations/: 0001_initial.py
apps/core/: apps.py
apps/threads/: admin.py  apps.py  constants.py  models.py  tasks.py  utils.py
apps/threads/api/: mutations.py  queries.py  types.py
apps/threads/migrations/: 0001_initial.py  0002_thread_pub_date.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  development.py  heroku-prod.py  production.py
requirements/: base.txt  base.txt # includes the base.txt  development.txt  heroku-prod.txt  production.txt
