[tool.poetry]
name = "threadly-api"
version = "0.1.0"
description = "An easy way to create thread and programming it"
authors = ["Reinier Hernández <sasuke.reinier@gmail.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^3.2.17"
psycopg2 = "^2.8.4"
Pillow = "^9.0.1"
celery = "^5.2.2"
redis = "^3.5.3"
django-celery-beat = "^2.2.1"
graphene-django = "^2.15.0"
django-graphql-jwt = "^0.3.4"
django-cors-headers = "^3.7.0"
tweepy = "^4.1.0"
qvapay = "^0.3.0"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
Sphinx = "^4.2.0"
coverage = "^5.5"
pylint = "^2.11.1"
mixer = "^7.1.2"
python-dotenv = "^0.19.0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
